fix navbar twitching due to missing overflow

--- a/src/app/features/kik0005/canvas.component.css
+++ b/src/app/features/kik0005/canvas.component.css
@@ -1,3 +1,8 @@
+/* General */
+html, body {
+   overflow-x: hidden;
+}
+
 /* Offcanvas */
 .offcanvas {
   position: relative;
